# synth-endpoint

./: .editorconfig  .gitignore  README.md
analyzer/: pyproject.toml  requirements.txt
analyzer/analyzer/: __init__.py  cli.py  config.py  generator.py  pipeline.py
analyzer/analyzer/detectors/: __init__.py  action_detector.py  ui_detector.py
analyzer/analyzer/extractors/: __init__.py  frame_extractor.py
analyzer/analyzer/mappers/: __init__.py  workflow_mapper.py
analyzer/analyzer/playback/: __init__.py  coordinated_player.py  os_controller.py  workflow_player.py
analyzer/analyzer/vlm/: __init__.py  analyzer.py  client.py  prompts.py
analyzer/config/: default.yaml
analyzer/tests/: __init__.py  test_workflow.py
docs/: CONTRIBUTING.md
examples/: credit-card-payments-workflow.json  sample-workflow.json  vlm-extracted-workflow.json
generator/: package-lock.json  package.json  tsconfig.json
generator/src/: auto-generator.ts
generator/src/builder/: ui-builder.ts
generator/src/cli/: generate.ts
generator/src/engine/: workflow-engine.ts
generator/src/main/: index.ts  preload.ts
generator/src/simulator/: behavior-simulator.ts
generator/src/types/: workflow.ts
schemas/: workflow.schema.json
